world: Honour the NO_SHARE in make.conf
Mark all cases that touch ${DESTDIR}/usr/share in one way or another.

While there, adust libmagic to use MAGICSHAREDIR instead of FILESDIR.

In-discussion-with: swildner

--- a/share/man/man5/make.conf.5
+++ b/share/man/man5/make.conf.5
@@ -421,7 +421,7 @@ Set to not build
 and related programs.
 .It Va NO_SHARE
 .Pq Vt bool
-Set to not enter the share subdirectory.
+Set to not enter or install to the share subdirectory.
 .It Va NOCLEAN
 .Pq Vt bool
 Set this to disable cleaning during
