arcmsr(4): Upgrade to Areca's Revision 1.40.00.00.
This adds support for various adapters: ARC1203, ARC1216, ARC1226, and
ARC1884.

Detailed list of changes:

1. fix ADAPTER_TYPE_D scanning device timeout.
2. fix ADAPTER_TYPE_D getting configuration data.
3. eliminate ending white-space of code.
4. align some code for more readable.
5. modify code of ADAPTER_TYPE_B for support ARC-1203
6. add a new ADAPTER_TYPE_E for support ARC-1884
7. adapter ARC-1215, 1225, 1216, 1226 are belong to ADAPTER_TYPE_C
   also support in this driver.
8. redefine ADAPTER_TYPE_A,B,C,D value

Thanks to Areca for actively supporting DragonFly!!

Submitted-by: Ching Huang <ching2048@areca.com.tw>
Tested-by:    kerma (Michael)

--- a/share/man/man4/arcmsr.4
+++ b/share/man/man4/arcmsr.4
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/arcmsr.4 259564 2013-12-18 19:23:05Z delphij $
 .\"
-.Dd February 25, 2014
+.Dd November 6, 2017
 .Dt ARCMSR 4
 .Os
 .Sh NAME
@@ -100,6 +100,8 @@ ARC-1200
 .It
 ARC-1201
 .It
+ARC-1203
+.It
 ARC-1210
 .It
 ARC-1212
@@ -108,6 +110,8 @@ ARC-1213
 .It
 ARC-1214
 .It
+ARC-1216
+.It
 ARC-1220
 .It
 ARC-1222
@@ -115,6 +119,8 @@ ARC-1222
 ARC-1223
 .It
 ARC-1224
+.It
+ARC-1226
 .It
 ARC-1230
 .It
@@ -169,6 +175,8 @@ ARC-1880ixl
 ARC-1882
 .It
 ARC-1883
+.It
+ARC-1884
 .El
 .Sh FILES
 .Bl -tag -width ".Pa /dev/arcmsr?" -compact
