--- a/usr.bin/telnet/telnet.1
+++ b/usr.bin/telnet/telnet.1
@@ -80,8 +80,8 @@ Forces
 .Nm
 to use IPv6 addresses only.
 .It Fl 8
-Specifies an 8-bit data path.  This causes an attempt to
-negotiate the
+Specifies an 8-bit data path.
+This causes an attempt to negotiate the
 .Dv TELNET BINARY
 option on both input and output.
 .It Fl E
@@ -96,7 +96,8 @@ have already been forwarded into the local environment.
 Specifies no automatic login to the remote system.
 This is now the default, so this option is ignored.
 .It Fl L
-Specifies an 8-bit data path on output.  This causes the
+Specifies an 8-bit data path on output.
+This causes the
 .Dv BINARY
 option to be negotiated on output.
 .It Fl N
@@ -130,7 +131,8 @@ otherwise it is the name associated with the user ID.
 .It Fl c
 Disables the reading of the user's
 .Pa \&.telnetrc
-file.  (See the
+file.
+(See the
 .Ic toggle skiprc
 command on this man page.)
 .It Fl d
@@ -219,13 +221,14 @@ starts with a
 .Nm
 establishes a connection to the corresponding named socket.
 .It Ar port
-Indicates a port number (address of an application).  If a number is
+Indicates a port number (address of an application).
+If a number is
 not specified, the default
 .Nm
 port is used.
 .El
 .Pp
-When in rlogin mode, a line of the form ~.  disconnects from the
+When in rlogin mode, a line of the form ~.\& disconnects from the
 remote host; ~ is the
 .Nm
 escape character.
@@ -251,9 +254,11 @@ depending on what the remote system supports.
 When
 .Dv LINEMODE
 is enabled, character processing is done on the
-local system, under the control of the remote system.  When input
+local system, under the control of the remote system.
+When input
 editing or character echoing is to be disabled, the remote system
-will relay that information.  The remote system will also relay
+will relay that information.
+The remote system will also relay
 changes to any special characters that happen on the remote
 system, so that they can take effect on the local system.
 .Pp
@@ -338,18 +343,19 @@ commands).
 .It Ic auth Ar argument ...
 The auth command manipulates the information sent through the
 .Dv TELNET AUTHENTICATE
-option.  Valid arguments for the
+option.
+Valid arguments for the
 .Ic auth
 command are:
 .Bl -tag -width "disable type"
 .It Ic disable Ar type
-Disables the specified type of authentication.  To
-obtain a list of available types, use the
+Disables the specified type of authentication.
+To obtain a list of available types, use the
 .Ic auth disable ?\&
 command.
 .It Ic enable Ar type
-Enables the specified type of authentication.  To
-obtain a list of available types, use the
+Enables the specified type of authentication.
+To obtain a list of available types, use the
 .Ic auth enable ?\&
 command.
 .It Ic status
@@ -378,18 +384,17 @@ command are:
 .It Ic disable Ar type Xo
 .Op Cm input | output
 .Xc
-Disables the specified type of encryption.  If you
-omit the input and output, both input and output
-are disabled.  To obtain a list of available
-types, use the
+Disables the specified type of encryption.
+If you omit the input and output, both input and output are disabled.
+To obtain a list of available types, use the
 .Ic encrypt disable ?\&
 command.
 .It Ic enable Ar type Xo
 .Op Cm input | output
 .Xc
-Enables the specified type of encryption.  If you
-omit input and output, both input and output are
-enabled.  To obtain a list of available types, use the
+Enables the specified type of encryption.
+If you omit input and output, both input and output are enabled.
+To obtain a list of available types, use the
 .Ic encrypt enable ?\&
 command.
 .It Ic input
@@ -409,18 +414,20 @@ This is the same as the
 .Ic encrypt stop output
 command.
 .It Ic start Op Cm input | output
-Attempts to start encryption.  If you omit
+Attempts to start encryption.
+If you omit
 .Ic input
 and
 .Ic output ,
-both input and output are enabled.  To
-obtain a list of available types, use the
+both input and output are enabled.
+To obtain a list of available types, use the
 .Ic encrypt enable ?\&
 command.
 .It Ic status
 Lists the current status of encryption.
 .It Ic stop Op Cm input | output
-Stops encryption.  If you omit input and output,
+Stops encryption.
+If you omit input and output,
 encryption is on both input and output.
 .It Ic type Ar type
 Sets the default type of encryption to be used
@@ -596,16 +603,19 @@ When connecting to a non-standard port,
 .Nm
 omits any automatic initiation of
 .Tn TELNET
-options.  When the port number is preceded by a minus sign,
+options.
+When the port number is preceded by a minus sign,
 the initial option negotiation is done.
 After establishing a connection, the file
 .Pa \&.telnetrc
 in the
-users home directory is opened.  Lines beginning with a # are
-comment lines.  Blank lines are ignored.  Lines that begin
-without white space are the start of a machine entry.  The
-first thing on the line is the name of the machine that is
-being connected to.  The rest of the line, and successive
+users home directory is opened.
+Lines beginning with a # are comment lines.
+Blank lines are ignored.
+Lines that begin without white space are the start of a machine entry.
+The first thing on the line is the name of the machine that is
+being connected to.
+The rest of the line, and successive
 lines that begin with white space are assumed to be
 .Nm
 commands and are processed as if they had been typed
@@ -761,8 +771,8 @@ any of the specified functions.
 The values of variables may be interrogated with the
 .Ic display
 command.
-The variables which may be set or unset, but not toggled, are
-listed here.  In addition, any of the variables for the
+The variables which may be set or unset, but not toggled, are listed here.
+In addition, any of the variables for the
 .Ic toggle
 command may be explicitly set or unset using
 the
@@ -780,8 +790,8 @@ is enabled, and the status character is typed, a
 .Dv TELNET AYT
 sequence (see
 .Ic send ayt
-preceding) is sent to the
-remote host.  The initial value for the \*(LqAre You There\*(Rq
+preceding) is sent to the remote host.
+The initial value for the \*(LqAre You There\*(Rq
 character is the terminal's status character.
 .It Ic echo
 This is the value (initially \*(Lq^E\*(Rq) which, when in
@@ -860,7 +870,8 @@ is operating in
 .Dv LINEMODE ,
 these are the
 characters that, when typed, cause partial lines to be
-forwarded to the remote system.  The initial value for
+forwarded to the remote system.
+The initial value for
 the forwarding characters are taken from the terminal's
 eol and eol2 characters.
 .It Ic interrupt
@@ -964,11 +975,11 @@ If set, the normal
 escape character is ignored unless it is
 preceded by this character at the beginning of a line.
 This character, at the beginning of a line followed by
-a "."  closes the connection; when followed by a ^Z it
+a "." closes the connection; when followed by a ^Z it
 suspends the
 .Nm
-command.  The initial state is to
-disable the
+command.
+The initial state is to disable the
 .Nm rlogin
 escape character.
 .It Ic start
@@ -1022,7 +1033,8 @@ or
 .Ic option
 tracing being
 .Dv TRUE ,
-will be written.  If it is set to
+will be written.
+If it is set to
 .Dq Fl ,
 then tracing information will be written to standard output (the default).
 .It Ic worderase
@@ -1055,9 +1067,8 @@ command (Set Local Characters) is used to set
 or change the state of the special
 characters when the
 .Dv TELNET LINEMODE
-option has
-been enabled.  Special characters are characters that get
-mapped to
+option has been enabled.
+Special characters are characters that get mapped to
 .Tn TELNET
 commands sequences (like
 .Ic ip
@@ -1075,9 +1086,8 @@ The remote side is requested to send all the current special
 character settings, and if there are any discrepancies with
 the local side, the local side will switch to the remote value.
 .It Ic export
-Switch to the local defaults for the special characters.  The
-local default characters are those of the local terminal at
-the time when
+Switch to the local defaults for the special characters.
+The local default characters are those of the local terminal at the time when
 .Nm
 was started.
 .It Ic import
@@ -1157,16 +1167,16 @@ When the
 .Dv TELNET ENCRYPT
 option is negotiated, by
 default the actual encryption (decryption) of the data
-stream does not start automatically.  The autoencrypt
-(autodecrypt) command states that encryption of the
-output (input) stream should be enabled as soon as
-possible.
+stream does not start automatically.
+The autoencrypt (autodecrypt) command states that encryption of the
+output (input) stream should be enabled as soon as possible.
 .It Ic autologin
 If the remote side supports the
 .Dv TELNET AUTHENTICATION
 option
 .Nm
-attempts to use it to perform automatic authentication.  If the
+attempts to use it to perform automatic authentication.
+If the
 .Dv AUTHENTICATION
 option is not supported, the user's login
 name are propagated through the
@@ -1333,8 +1343,8 @@ When the skiprc toggle is
 skips the reading of the
 .Pa \&.telnetrc
 file in the users home
-directory when connections are opened.  The initial
-value for this toggle is
+directory when connections are opened.
+The initial value for this toggle is
 .Dv FALSE .
 .It Ic termdata
 Toggles the display of all terminal data (in hexadecimal format).
@@ -1346,8 +1356,8 @@ When the
 toggle is
 .Dv TRUE ,
 .Nm
-prints out a message each time encryption is enabled or
-disabled.  The initial value for this toggle is
+prints out a message each time encryption is enabled or disabled.
+The initial value for this toggle is
 .Dv FALSE .
 .It Ic ?\&
 Displays the legal
@@ -1360,13 +1370,14 @@ Suspend
 This command only works when the user is using the
 .Xr csh 1 .
 .It Ic \&! Op Ar command
-Execute a single command in a subshell on the local
-system.  If
+Execute a single command in a subshell on the local system.
+If
 .Ar command
 is omitted, then an interactive
 subshell is invoked.
 .It Ic ?\& Op Ar command
-Get help.  With no arguments,
+Get help.
+With no arguments,
 .Nm
 prints a help summary.
 If
