--- a/sbin/mountd/exports.5
+++ b/sbin/mountd/exports.5
@@ -129,12 +129,12 @@ In the absence of
 .Fl maproot
 and
 .Fl mapall
-options, remote accesses by root will result in using a credential of -2:-2.
+options, remote accesses by root will result in using a credential of 65534:65533.
 All other users will be mapped to their remote credential.
 If a
 .Fl maproot
 option is given,
-remote access by root will be mapped to that credential instead of -2:-2.
+remote access by root will be mapped to that credential instead of 65534:65533.
 If a
 .Fl mapall
 option is given,
