exports.5: network prefixlength (CIDR) format is supported
Also take various minor fixes from FreeBSD.

--- a/sbin/mountd/exports.5
+++ b/sbin/mountd/exports.5
@@ -29,7 +29,7 @@
 .\" $FreeBSD: src/sbin/mountd/exports.5,v 1.10.2.8 2002/09/28 16:31:45 markm Exp $
 .\" $DragonFly: src/sbin/mountd/exports.5,v 1.5 2007/11/23 23:16:36 swildner Exp $
 .\"
-.Dd March 29, 1995
+.Dd November 10, 2017
 .Dt EXPORTS 5
 .Os
 .Sh NAME
@@ -59,8 +59,9 @@ filesystem for one or more hosts.
 A host may be specified only once for each local filesystem on the
 server and there may be only one default entry for each server
 filesystem that applies to all other hosts.
-The latter exports the filesystem to the ``world'' and should
-be used only when the filesystem contains public information.
+The latter exports the filesystem to the
+.Dq world
+and should be used only when the filesystem contains public information.
 .Pp
 In a mount entry,
 the first field(s) specify the directory path(s) within a server filesystem
@@ -68,6 +69,13 @@ that can be mounted on by the corresponding client(s).
 There are two forms of this specification.
 The first is to list all mount points as absolute
 directory paths separated by whitespace.
+This list of directory paths should be considered an
+.Dq administrative control ,
+since it is only enforced by the
+.Xr mountd 8
+daemon and not the kernel.
+As such, it only applies to NFSv2 and NFSv3 mounts and only
+with respect to the client's use of the mount protocol.
 The second is to specify the pathname of the root of the filesystem
 followed by the
 .Fl alldirs
@@ -78,20 +86,24 @@ including regular files if the
 option is used on
 .Xr mountd 8 .
 The pathnames must not have any symbolic links in them and should not have
-any "." or ".." components.
+any
+.Dq Pa \&.
+or
+.Dq Pa ..
+components.
 Mount points for a filesystem may appear on multiple lines each with
 different sets of hosts and export options.
 .Pp
 The second component of a line specifies how the filesystem is to be
 exported to the host set.
 The option flags specify whether the filesystem
-is exported read-only or read-write and how the client uid is mapped to
+is exported read-only or read-write and how the client UID is mapped to
 user credentials on the server.
 .Pp
 Export options are specified as follows:
 .Pp
 .Sm off
-.Fl maproot No = Sy user
+.Fl maproot Li = Sy user
 .Sm on
 The credential of the specified user is used for remote access by root.
 The credential includes all the groups to which the user is a member
@@ -100,7 +112,7 @@ on the local machine (see
 The user may be specified by name or number.
 .Pp
 .Sm off
-.Fl maproot No = Sy user:group1:group2:...
+.Fl maproot Li = Sy user:group1:group2:...
 .Sm on
 The colon separated list is used to specify the precise credential
 to be used for remote access by root.
@@ -109,13 +121,13 @@ Note that user: should be used to distinguish a credential containing
 no groups from a complete credential for that user.
 .Pp
 .Sm off
-.Fl mapall No = Sy user
+.Fl mapall Li = Sy user
 .Sm on
 or
 .Sm off
-.Fl mapall No = Sy user:group1:group2:...
+.Fl mapall Li = Sy user:group1:group2:...
 .Sm on
-specifies a mapping for all client uids (including root)
+specifies a mapping for all client UIDs (including root)
 using the same semantics as
 .Fl maproot .
 .Pp
@@ -157,7 +169,7 @@ be done with the
 .Fl public
 flag.
 However, this flag in itself allows r/w access to all files in
-the filesystem, not requiring reserved ports and not remapping uids.
+the file system, not requiring reserved ports and not remapping UIDs.
 It
 is only provided to conform to the spec, and should normally not be used.
 For a
@@ -204,8 +216,14 @@ below).
 The third component of a line specifies the host set to which the line applies.
 The set may be specified in three ways.
 The first way is to list the host name(s) separated by white space.
-(Standard Internet ``dot'' addresses may be used in place of names.)
-The second way is to specify a ``netgroup'' as defined in the netgroup file (see
+(Standard Internet
+.Dq dot
+addresses may be used in place of names.)
+The second way is to specify a
+.Dq netgroup
+as defined in the
+.Pa netgroup
+file (see
 .Xr netgroup 5 ) .
 The third way is to specify an Internet subnetwork using a network and
 network mask that is defined as the set of all hosts with addresses within
@@ -216,18 +234,26 @@ large number of clients within an administrative subnet.
 .Pp
 The first two cases are specified by simply listing the name(s) separated
 by whitespace.
-All names are checked to see if they are ``netgroup'' names
-first and are assumed to be hostnames otherwise.
+All names are checked to see if they are
+.Dq netgroup
+names first and are assumed to be hostnames otherwise.
 Using the full domain specification for a hostname can normally
 circumvent the problem of a host that has the same name as a netgroup.
 The third case is specified by the flag
 .Sm off
-.Fl network No = Sy netname
+.Fl network Li = Sy netname Op Li / Ar prefixlength
 .Sm on
 and optionally
 .Sm off
 .Fl mask No = Sy netmask .
 .Sm on
+The netmask may be specified either by attaching a
+.Ar prefixlength
+to the
+.Fl network
+option, or by using a separate
+.Fl mask
+option.
 If the mask is not specified, it will default to the mask for that network
 class (A, B or C; see
 .Xr inet 4 ) .
@@ -241,7 +267,7 @@ utility can be made to re-read the
 .Nm
 file by sending it a hangup signal as follows:
 .Bd -literal -offset indent
-kill -s HUP `cat /var/run/mountd.pid`
+/etc/rc.d/mountd reload
 .Ed
 .Pp
 After sending the
@@ -264,6 +290,7 @@ the default remote mount-point file
 /usr -maproot=daemon grumpy.cis.uoguelph.ca 131.104.48.16
 /usr -ro -mapall=nobody
 /u -maproot=bin: -network 131.104.48 -mask 255.255.255.0
+/a -network 192.168.0/24
 /u2 -maproot=root friends
 /u2 -alldirs -network cis-net -mask cis-mask
 /cdrom -alldirs,quiet,ro -network 192.168.33.0 -mask 255.255.255.0
@@ -271,38 +298,67 @@ the default remote mount-point file
 .Pp
 Given that
 .Pa /usr ,
-.Pa /u
+.Pa /u ,
+.Pa /a
 and
 .Pa /u2
 are
 local filesystem mount points, the above example specifies the following:
+.Pp
+The file system rooted at
 .Pa /usr
 is exported to hosts
 .Em friends
 where friends is specified in the netgroup file
 with users mapped to their remote credentials and
-root mapped to uid 0 and group 10.
-It is exported read-write and the hosts in ``friends'' can mount either /usr
-or /usr/local.
+root mapped to UID 0 and group 10.
+It is exported read-write and the hosts in
+.Dq friends
+can mount either
+.Pa /usr
+or
+.Pa /usr/local .
 It is exported to
 .Em 131.104.48.16
 and
 .Em grumpy.cis.uoguelph.ca
 with users mapped to their remote credentials and
-root mapped to the user and groups associated with ``daemon'';
+root mapped to the user and groups associated with
+.Dq daemon ;
 it is exported to the rest of the world as read-only with
-all users mapped to the user and groups associated with ``nobody''.
+all users mapped to the user and groups associated with
+.Dq nobody .
 .Pp
+The file system rooted at
 .Pa /u
 is exported to all hosts on the subnetwork
 .Em 131.104.48
-with root mapped to the uid for ``bin'' and with no group access.
+with root mapped to the UID for
+.Dq bin
+and with no group access.
 .Pp
+The file system rooted at
 .Pa /u2
-is exported to the hosts in ``friends'' with root mapped to uid and groups
-associated with ``root'';
-it is exported to all hosts on network ``cis-net'' allowing mounts at any
+is exported to the hosts in
+.Dq friends
+with root mapped to UID and groups
+associated with
+.Dq root ;
+it is exported to all hosts on network
+.Dq cis-net
+allowing mounts at any
 directory within /u2.
+.Pp
+The file system rooted at
+.Pa /a
+is exported to the network 192.168.0.0, with a netmask of 255.255.255.0.
+However, the netmask length in the entry for
+.Pa /a
+is not specified through a
+.Fl mask
+option, but through the
+.Li / Ns Ar prefix
+notation.
 .Pp
 The filesystem rooted at
 .Pa /cdrom
