--- a/share/man/man4/ix.4
+++ b/share/man/man4/ix.4
@@ -31,7 +31,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/ixgbe.4,v 1.2 2008/06/17 21:14:02 brueffer Exp $
 .\"
-.Dd September 24, 2017
+.Dd November 28, 2017
 .Dt IX 4
 .Os
 .Sh NAME
@@ -157,51 +157,51 @@ Intel 82599EB 10 Gigabit Ethernet Controller
 .It
 Intel 82598EB 10 Gigabit Ethernet Controller
 .It
-Intel Ethernet Converged Network Adapter X520-SR1
-.It
-Intel Ethernet Converged Network Adapter X520-SR2
-.It
-Intel Ethernet Converged Network Adapter X520-DA2
-.It
 Intel Ethernet Converged Network Adapter X520-LR1
 .It
 Intel 82599ES 10 Gigabit Ethernet Controller
 .It
-Intel 10 Gigabit AF DA Dual Port Server Adapter
-.It
 Intel 10 Gigabit AT Server Adapter
 .It
-Intel 10 Gigabit AT2 Server Adapter
+Intel Ethernet Controller X540-AT2
 .It
-Intel 10 Gigabit CX4 Dual Port Server Adapter
+Intel Ethernet Converged Network Adapter X520-SR1
 .It
-Intel 10 Gigabit XF LR Server Adapter
+Intel Ethernet Converged Network Adapter X520-DA2
 .It
-Intel 10 Gigabit XF SR Dual Port Server Adapter
+Intel Ethernet Controller X550-BT2
 .It
-Intel 10 Gigabit XF SR Server Adapter
+Intel Ethernet Controller X710-AM2
+.It
+Intel Ethernet Converged Network Adapter X710-DA4
+.It
+Intel Ethernet Converged Network Adapter X550-T1
+.It
+Intel Ethernet Connection X557-AT2
+.It
+Intel Ethernet Controller X550-AT2
+.It
+Intel Ethernet Connection X557-AT4
+.It
+Intel Ethernet Converged Network Adapter X520-SR2
 .It
 Intel Ethernet Converged Network Adapter X540-T1
-.It
-Intel Ethernet Converged Network Adapter X540-T2
-.It
-Intel Ethernet Controller X540-AT2
 .It
 Intel 82599EN 10 Gigabit Ethernet Controller
 .It
 Intel Ethernet Converged Network Adapter X520-DA1
 .It
-Intel Ethernet Converged Network Adapter X520-DA4
+Intel Ethernet Converged Network Adapter X710-DA2
+.It
+Intel Ethernet Converged Network Adapter X550-T2
+.It
+Intel Ethernet Controller X550-AT
+.It
+Intel Ethernet Converged Network Adapter X540-T2
 .It
 Intel Ethernet Converged Network Adapter X520-QDA1
 .It
-Intel Ethernet Converged Network Adapter X520-T2
-.It
-Intel Ethernet Controller X710-AM2
-.It
-Intel Ethernet Converged Network Adapter X710-DA2
-.It
-Intel Ethernet Converged Network Adapter X710-DA4
+Intel Ethernet Connection X557-AT
 .El
 .Sh TUNABLES
 Tunables can be set at the
