--- a/share/man/man6/intro.6
+++ b/share/man/man6/intro.6
@@ -26,7 +26,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/share/man/man6/intro.6,v 1.4.2.4 2001/08/17 13:08:48 ru Exp $
-.\" $DragonFly: src/share/man/man6/intro.6,v 1.3 2006/02/17 19:37:10 swildner Exp $
 .\"
 .Dd November 14, 2009
 .Dt INTRO 6
@@ -53,8 +52,7 @@ location of games
 .\" games tutorials
 .El
 .Sh SEE ALSO
-.Xr intro 1 ,
-.Xr dm 8
+.Xr intro 1
 .Pp
 Tutorials in the
 .Rs
