banner.1: Adjust for 80 columns terminals.

--- a/usr.bin/banner/banner.1
+++ b/usr.bin/banner/banner.1
@@ -34,7 +34,7 @@ in large letters on the standard output.
 The command
 .Ic banner dragonfly
 displays:
-.Bd -literal -offset indent
+.Bd -literal
  #####   #####     ##     ####    ####   #    #  ######  #        #   #
  #    #  #    #   #  #   #    #  #    #  ##   #  #       #         # #
  #    #  #    #  #    #  #       #    #  # #  #  #####   #          #
