Fix some typos in manual pages.

--- a/lib/libc/sys/umtx.2
+++ b/lib/libc/sys/umtx.2
@@ -159,7 +159,7 @@ This function can also return -1 with errno set to
 due to internal kernel effects.
 .Pp
 This function can return without error when woken up via internal
-kernal effects and not necessarily just by a
+kernel effects and not necessarily just by a
 .Fn umtx_wakeup
 call.
 .Pp
