--- a/share/man/man7/build.7
+++ b/share/man/man7/build.7
@@ -283,7 +283,7 @@ The advantage of this is that no installation mechanism will overwrite
 your
 .Pa /boot/kernel.bak ,
 and in addition to that the loader's boot menu will check for its
-existance and present a menu option 'b' to allow you to boot from it.
+existence and present a menu option 'b' to allow you to boot from it.
 .Pp
 The second mechanism is related to the two-stage root mount.
 When using an encrypted root, the system will actually boot from a
