--- a/usr.bin/systat/systat.1
+++ b/usr.bin/systat/systat.1
@@ -579,7 +579,7 @@ curve to prevent fields from jumping around too much.
 Units for all rows
 are selected based on the largest bandwidth measurement for uniformity.
 Note that two states will be present for any connection operating over NAT.
-Needs root priviledge.
+Needs root privilege.
 .It Ic altqs
 Display packet filter altq statistics.
 The ALTQ operates in conjunction with the packet filter (pf) on the
