newfs_hammer.8: Fix up the HISTORY section.
Reported-by: kerma (Michael)

--- a/sbin/newfs_hammer2/newfs_hammer2.8
+++ b/sbin/newfs_hammer2/newfs_hammer2.8
@@ -240,6 +240,8 @@ on
 The
 .Nm
 utility first appeared in
-.Dx 1.11 .
+.Dx 3.1
+but was not enabled unconditionally until
+.Dx 4.9 .
 .Sh AUTHORS
 .An Matthew Dillon Aq Mt dillon@backplane.com
