libpthread: Add pthread_mutex_timedlock() reference to some manual pages.

--- a/lib/libpthread/pthread_mutex_unlock.3
+++ b/lib/libpthread/pthread_mutex_unlock.3
@@ -26,7 +26,6 @@
 .\" SUCH DAMAGE.
 .\"
 .\" $FreeBSD: src/share/man/man3/pthread_mutex_unlock.3,v 1.16 2007/10/22 10:08:00 ru Exp $
-.\" $DragonFly: src/lib/libc_r/man/pthread_mutex_unlock.3,v 1.2 2003/06/17 04:26:48 dillon Exp $
 .\"
 .Dd July 10, 2009
 .Dt PTHREAD_MUTEX_UNLOCK 3
@@ -69,6 +68,7 @@ The current thread does not hold a lock on
 .Xr pthread_mutex_destroy 3 ,
 .Xr pthread_mutex_init 3 ,
 .Xr pthread_mutex_lock 3 ,
+.Xr pthread_mutex_timedlock 3 ,
 .Xr pthread_mutex_trylock 3
 .Sh STANDARDS
 The
