pthread_mutex_*.3: Add {get,set}prioceiling to SEE ALSO.

--- a/lib/libpthread/pthread_mutex_init.3
+++ b/lib/libpthread/pthread_mutex_init.3
@@ -68,7 +68,9 @@ The process cannot allocate enough memory to create another mutex.
 .Sh SEE ALSO
 .Xr pthread_mutexattr 3 ,
 .Xr pthread_mutex_destroy 3 ,
+.Xr pthread_mutex_getprioceiling 3 ,
 .Xr pthread_mutex_lock 3 ,
+.Xr pthread_mutex_setprioceiling 3 ,
 .Xr pthread_mutex_timedlock 3 ,
 .Xr pthread_mutex_trylock 3 ,
 .Xr pthread_mutex_unlock 3
