--- a/lib/libpthread/pthread_mutex_destroy.3
+++ b/lib/libpthread/pthread_mutex_destroy.3
@@ -63,8 +63,10 @@ is invalid.
 is locked by another thread.
 .El
 .Sh SEE ALSO
+.Xr pthread_mutex_getprioceiling 3 ,
 .Xr pthread_mutex_init 3 ,
 .Xr pthread_mutex_lock 3 ,
+.Xr pthread_mutex_setprioceiling 3 ,
 .Xr pthread_mutex_timedlock 3 ,
 .Xr pthread_mutex_trylock 3 ,
 .Xr pthread_mutex_unlock 3
