em/emx: Sync with Intel's em 7.6.2
- Fix RX filter settings when exiting promiscous mode.
- Add workaround for I219 resetting.
- Fix some settings for 82574.

Tested-by: dillon@ (I219)

--- a/share/man/man4/em.4
+++ b/share/man/man4/em.4
@@ -31,7 +31,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/em.4,v 1.30 2008/10/06 21:55:53 simon Exp $
 .\"
-.Dd May 26, 2017
+.Dd December 17, 2017
 .Dt EM 4
 .Os
 .Sh NAME
@@ -217,15 +217,13 @@ Intel 82540EP Gigabit Ethernet Controller
 .It
 Intel 82543GC Gigabit Ethernet Controller
 .It
-Intel 82544 Gigabit Ethernet Controller
-.It
 Intel 82544EI Gigabit Ethernet Controller
+.It
+Intel 82544GC Gigabit Ethernet Controller
 .It
 Intel 82545GM Gigabit Ethernet Controller
 .It
 Intel 82546EB Gigabit Ethernet Controller
-.It
-Intel 82547EI Gigabit Ethernet Controller
 .It
 Intel 82547GI Gigabit Ethernet Controller
 .It
@@ -241,11 +239,17 @@ Intel 82573L Gigabit Ethernet Controller
 .It
 Intel 82573V Gigabit Ethernet Controller
 .It
-Intel 82574 Gigabit Ethernet Controller
+Intel 82574IT Gigabit Ethernet Controller
 .It
-Intel 82578 Gigabit Ethernet PHY
+Intel 82574L Gigabit Ethernet Controller
 .It
-Intel 82579 Gigabit Ethernet Controller
+Intel 82578DC Gigabit Ethernet PHY
+.It
+Intel 82578DM Gigabit Ethernet PHY
+.It
+Intel 82579LM Gigabit Ethernet PHY
+.It
+Intel 82579V Gigabit Ethernet PHY
 .It
 Intel Ethernet Connection I217-LM
 .It
@@ -263,8 +267,6 @@ Intel Gigabit CT Desktop Adapter
 .It
 Intel PRO/1000 F Server Adapter
 .It
-Intel PRO/1000 GT Quad Port Server Adapter
-.It
 Intel PRO/1000 MF Dual Port Server Adapter
 .It
 Intel PRO/1000 MF Server Adapter
@@ -275,21 +277,13 @@ Intel PRO/1000 MT Dual Port Server Adapter
 .It
 Intel PRO/1000 MT Quad Port Server Adapter
 .It
-Intel PRO/1000 MT Server Adapter
-.It
 Intel PRO/1000 PF Dual Port Server Adapter
-.It
-Intel PRO/1000 PF Quad Port Server Adapter
-.It
-Intel PRO/1000 PF Server Adapter
 .It
 Intel PRO/1000 PT Dual Port Server Adapter
 .It
 Intel PRO/1000 PT Quad Port Low Profile Server Adapter
 .It
 Intel PRO/1000 PT Quad Port Server Adapter
-.It
-Intel PRO/1000 PT Server Adapter
 .It
 Intel PRO/1000 T Server Adapter
 .It
