--- a/sbin/md5/md5.1
+++ b/sbin/md5/md5.1
@@ -1,11 +1,12 @@
 .\" $FreeBSD: src/sbin/md5/md5.1,v 1.24 2005/03/10 09:56:39 cperciva Exp $
-.Dd January 21, 2010
+.Dd December 17, 2017
 .Dt MD5 1
 .Os
 .Sh NAME
 .Nm md5 ,
 .Nm sha1 ,
 .Nm sha256 ,
+.Nm sha512 ,
 .Nm rmd160
 .Nd calculate a message-digest fingerprint (checksum) for a file
 .Sh SYNOPSIS
@@ -37,7 +38,8 @@
 The
 .Nm md5 ,
 .Nm sha1 ,
-.Nm sha256
+.Nm sha256 ,
+.Nm sha512
 and
 .Nm rmd160
 utilities take as input a message of arbitrary length and produce as
@@ -50,7 +52,7 @@ It is conjectured that it is computationally infeasible to
 produce two messages having the same message digest, or to produce any
 message having a given prespecified target message digest.
 The
-.Tn MD5 , SHA-1, SHA-256
+.Tn MD5 , SHA-1, SHA-256, SHA-512
 and
 .Tn RIPEMD-160
 algorithms are intended for digital signature applications, where a
@@ -61,16 +63,11 @@ in a secure manner before being encrypted with a private
 key under a public-key cryptosystem such as
 .Tn RSA .
 .Pp
+The
 .Tn MD5
-has not yet (2001-09-03) been broken, but sufficient attacks have been
-made that its security is in some doubt.
-The attacks on
-.Tn MD5
-are in the nature of finding
-.Dq collisions
-\(em that is, multiple
-inputs which hash to the same value; it is still unlikely for an attacker
-to be able to determine the exact original input given a hash value.
+and
+.Tn SHA-1
+algorithms are vulnerable to practical collision attacks.
 .Pp
 The following options may be used in any combination and must
 precede any files named on the command line.
@@ -108,7 +105,7 @@ Print a checksum of the given
 .It Fl p
 Echo stdin to stdout and append the checksum to stdout.
 .It Fl q
-Quiet mode - only the checksum is printed out.
+Quiet mode \(em only the checksum is printed out.
 Overrides the
 .Fl r
 option.
@@ -128,7 +125,8 @@ Run a built-in test script.
 The
 .Nm md5 ,
 .Nm sha1 ,
-.Nm sha256
+.Nm sha256 ,
+.Nm sha512
 and
 .Nm rmd160
 utilities exit 0 on success, and
@@ -142,7 +140,9 @@ A mistake with command line arguments results in
 .Xr mmap 2 ,
 .Xr md5 3 ,
 .Xr ripemd 3 ,
-.Xr sha 3
+.Xr sha 3 ,
+.Xr sha256 3 ,
+.Xr sha512 3
 .Rs
 .%A R. Rivest
 .%T The MD5 Message-Digest Algorithm
